Fixed overflow in the Stats widget

--- a/modules/app/src/main/resources/assets/styles/widgets/stats.less
+++ b/modules/app/src/main/resources/assets/styles/widgets/stats.less
@@ -1,6 +1,8 @@
 @import "~enonic-admin-artifacts";
 
 #widget-stats {
+  display: inline-table;
+
   .widget-header {
     color: @admin-white;
   }
